test/types/records/split-init/error-never-initialized-values-not-mentioned2.chpl
class C { }

proc error() {
  // These are just never mentioned again
  var b1: borrowed C;
}
error();
